# Hydrological-Model-Validator

./: .readthedocs.yaml  AUTHORS.md  Benthic_Layer.py  CHANGELOG.md  CHL_data_analyzer.py  Data_reader_setupper.py  Data_reader_setupper_2.0.py  MANIFEST.in  README.md  SST_data_analyzer.py  TODOs.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
Hydrological_model_validator/: Report_generator.py  __init__.py  __main__.py
Hydrological_model_validator/Plotting/: Auxilliary.py  Plots.py  Target_plots.py  Taylor_diagrams.py  __init__.py  bfm_plots.py  default_bfm_plot_options.py  default_plot_options.py  default_target_options.py  default_taylor_options.py  formatting.py  taylor_option_config - monthly.csv  taylor_option_config.csv
Hydrological_model_validator/Processing/: BFM_data_reader.py  Corollary.py  Costants.py  Data_saver.py  Density.py  Efficiency_metrics.py  Flood.m  Interpolator.asv  Interpolator.m  Interpolator_v2.m  MOD_data_reader.py  Missing_data.py  SAT_data_reader.py  Target_computations.py  Taylor_computations.py  __init__.py  data_alignment.py  file_io.py  stats_math_utils.py  time_utils.py  utils.py
Hydrological_model_validator/Report/: report_utils.py
Plotting/: Auxilliary.py  Daily_means_timeseries.py  Plots.py  Scatter_plot.py  Target_plots.py  Taylor_diagrams.py
Processing/: Bavger_CHL.py  CHL_array.py  CHL_model_reader.py  Concatenator.py  Corollary.py  Costants.py  Daily_mean.py  Data_saver.py  Data_setupper.py  Density.py  Efficiency_metrics.py  Flood.m  Flood.py  Interpolator.py  Interpolator_v2.m  Leap_year.py  MOD_data_reader.py  Mask_reader.py  Missing_data.py  Model_SST_reader.py  Model_data_reader.py  SAT_data_reader.py  SST_Reader_test.py  SST_SAT_reader.py
Test case/: CHL_data_analyzer.py  Data_reader_setupper.py  SST_data_analyzer.py
Test_cases/: Benthic_Layer.py  CHL_data_analyzer.py  Data_reader_setupper.py  Download_data.py  SST_data_analyzer.py  TEST_CASES_README.md
Test_cases/Pytests/: test_BFM_reader.py  test_bfm_plots.py  test_data_alignment.py  test_data_saver.py  test_density.py  test_efficiency_metrics.py  test_file_io.py  test_formatting.py  test_main_routine.py  test_missing_data.py  test_mod_data_reader.py  test_plots.py  test_report_classes.py  test_report_functions.py  test_report_generator.py  test_sat_data_reader.py  test_stats_math.py  test_target_computations.py  test_target_plot.py  test_taylor_computations.py  test_taylor_plots.py  test_time_utils.py  test_utils.py
docs/: CHANGELOG.md  TEST_CASES_README.md  requirements.txt
docs/source/: CHANGELOG.md  TEST_CASES_README.md  changelog_wrapper.md  conf.py  index.md  test_case_readme_wrapped.md
docs/source/api/: api_index.rst
docs/source/api/plotting/: bfm_plots.rst  plots.rst  plotting_index.rst  target_plots.rst  taylor_diagrams.rst
docs/source/api/processing/: bfm_data_reader.rst  data_alignment.rst  data_saver.rst  density.rst  efficiency_metrics.rst  file_io.rst  missing_data.rst  mod_data_reader.rst  processing_index.rst  sat_data_reader.rst  stats_math_utils.rst  target_computations.rst  taylor_computations.rst  time_utils.rst  utils.rst
docs/source/api/report/: report_generator.rst  report_index.rst  report_utils.rst
source/: conf.py
