[project]
name = 'Hydrological_model_validator'
version = '4.7.1'
description = 'Tools for the analysis and validation of Bio-Geo-Hydrological simulations and other climatological data'
readme = 'README.md'
requires-python = '>=3.7'

authors = [
  { name='Alessandro Gozzoli', email='alessandro.gozzoli4@studio.unibo.it' },
]

maintainers = [
  { name='Alessandro Gozzoli', email='alessandro.gozzoli4@studio.unibo.it' },
]

keywords = [
  'hydrology',
  'climatology',
  'model-validation',
  'bio-geo-physical',
  'oceanography',
]

classifiers = [
  'Natural Language :: English',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: POSIX',
  'Operating System :: POSIX :: Linux',
  'Operating System :: Microsoft :: Windows',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy'
]

dependencies = [
  'numpy',
  'pandas',
  'xarray',
  'matplotlib',
  'scikit-learn',
  'statsmodels',
  'netCDF4',
  'SkillMetrics',
  'gsw',
  'cmocean',
  'seaborn',
  'plotly',
  'cartopy',
  'cryptography',
  'scipy',
  'dask'
]

[project.optional-dependencies]
dev = [
  'flake8',
  'pytest',
  'pytest-cov',
  'pytest-mock',
  'codecov'
]

[project.urls]
Homepage = "https://github.com/AlessandroGozzoli/Hydrological-Model-Validator"
"Bug Tracker" = "https://github.com/AlessandroGozzoli/Hydrological-Model-Validator/issues"

[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'