[project]
name = "Hydrological_model_validator"
version = "4.9.1"
description = "Tools for the analysis and validation of Bio-Geo-Hydrological simulations and other climatological data"
readme = "README.md"
requires-python = ">=3.7"
keywords = [
  "bio-geo-physical",
  "climatology",
  "hydrology",
  "model-validation",
  "oceanography"
]
classifiers = [
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
authors = [
  { name = "Alessandro Gozzoli", email = "alessandro.gozzoli4@studio.unibo.it" }
]
maintainers = [
  { name = "Alessandro Gozzoli", email = "alessandro.gozzoli4@studio.unibo.it" }
]
dependencies = [
  "cartopy",
  "cmocean",
  "cryptography",
  "dask",
  "gsw",
  "matplotlib",
  "netCDF4",
  "numpy",
  "pandas",
  "plotly",
  "scikit-learn",
  "scipy",
  "seaborn",
  "SkillMetrics",
  "statsmodels",
  "xarray"
]

[project.scripts]
sst-analyze = "Test_cases.SST_data_analyzer:main"
chl-analyze = "Test_cases.CHL_data_analyzer:main"
bfm-analyze = "Test_cases.Benthic_Layer:main"
data-setupper = "Test_cases.Data_reader_setupper:main"

[project.optional-dependencies]
dev = [
  "codecov",
  "flake8",
  "pytest",
  "pytest-cov",
  "pytest-mock"
]

[project.urls]
Homepage = "https://github.com/AlessandroGozzoli/Hydrological-Model-Validator"
"Bug Tracker" = "https://github.com/AlessandroGozzoli/Hydrological-Model-Validator/issues"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
